# spaceattack

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS.md  README  README.md  TODO  TODO.md  cmdline.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  entity.h  main.cc  main.h  movinga  spaceattack-2.0.tar.bz2  spaceattack-2.0.tar.bz2.sig  spaceattack.cfg  text.cc  text.h
.deps/: cmdline.Po  movinga-main.Po
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
src/: CMakeLists.txt  args.ggo  entity.cc  entity.h  main.cc  main.h  text.cc  text.h
tags/basic-version/: movingav4.2.1-src.bas  movingav4.2.3-src.bas
trunk/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  cmdline.h  config.status  configure  configure.ac  configure.scan  entity.h  main.cc  main.h  movinga  spaceattack-1.0.tar.bz2
trunk/.deps/: movinga-main.Po
trunk/autom4te.cache/: requests  traces.1
